--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
         </div>
     </section>
 
+    <section class="footer">
+        <div class="contact">
+            <h2>Contact Us</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum perspiciatis suscipit harum, ad eius assumenda doloribus incidunt. Assumenda, expedita eveniet, accusantium ducimus molestiae tempora quidem iste, aut voluptatibus modi vel necessitatibus laboriosam iusto. Facilis, libero.</p>
+        </div>
+        <div class="about">
+            <h2>About Us</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum et harum impedit totam ipsam doloribus molestiae commodi, voluptatibus dicta voluptatum in, error voluptatem sed minus aliquam alias tempora maxime quis earum aspernatur omnis quas, blanditiis autem aut. Quasi, perspiciatis in?</p>
+        </div>
+    </section>
+
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
